Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-48036

Eventing compilation warnings

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Unknown

    Description

      [581/643] Building CXX object goproj/src/github.com/couchbase/eventing/v8_consumer/CMakeFiles/eventing-consumer.dir/src/v8worker.cc.o
      In file included from ../goproj/src/github.com/couchbase/eventing/v8_consumer/src/v8worker.cc:31:
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/include/v8worker.h: In constructor 'V8Worker::V8Worker(v8::Platform*, handler_config_t*, server_settings_t*, const string&, const string&, const string&, const string&, Histogram*, Histogram*, const string&, const int32_t&, vb_seq_map_t*, std::vector<long unsigned int>, vb_lock_map_t, int)':
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/include/v8worker.h:402:15: warning: 'V8Worker::ns_server_port_' will be initialized after [-Wreorder]
      402 | std::string ns_server_port_;

      ^~~~~~~~~~~~~~~
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/include/v8worker.h:397:15: warning: 'std::string V8Worker::certFile_' [-Wreorder]
      397
      std::string certFile_;
      ^~~~~~~~~
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/src/v8worker.cc:262:1: warning: when initialized here [-Wreorder]
      262
      V8Worker::V8Worker(v8::Platform *platform, handler_config_t *h_config,
      ^~~~~~~~
      [597/643] Building CXX object goproj/src/github.com/couchbase/eventing/v8_consumer/CMakeFiles/eventing-consumer.dir/__/features/src/bucket.cc.o
      ../goproj/src/github.com/couchbase/eventing/features/src/bucket.cc: In member function 'bool Bucket::MaybeRecreateConnOnAuthErr(const lcb_STATUS&, bool)':
      ../goproj/src/github.com/couchbase/eventing/features/src/bucket.cc:210:18: warning: 'tmp_instance' may be used uninitialized in this function [-Wmaybe-uninitialized]
      210
      lcb_destroy(tmp_instance);
      ~~~~~~~~~~^~~~~~~~~~~~~
      [602/643] Building CXX object goproj/src/github.com/couchbase/eventing/v8_consumer/CMakeFiles/eventing-consumer.dir/__/features/src/utils.cc.o
      In file included from ../goproj/src/github.com/couchbase/eventing/v8_consumer/../features/include/lcb_utils.h:15,
      from ../goproj/src/github.com/couchbase/eventing/features/src/utils.cc:19:
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/../features/include/utils.h: In constructor 'Utils::Utils(v8::Isolate*, const v8::Local<v8::Context>&, std::string)':
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/../features/include/utils.h:168:9: warning: 'Utils::curl_handle_' will be initialized after [-Wreorder]
      168
      CURL *curl_handle_; // Used only to perform url encode/decode
      ^~~~~~~~~~~~
      ../goproj/src/github.com/couchbase/eventing/v8_consumer/../features/include/utils.h:164:15: warning: 'std::string Utils::certFile_' [-Wreorder]
      164
      std::string certFile_;
      ^~~~~~~~~
      ../goproj/src/github.com/couchbase/eventing/features/src/utils.cc:343:1: warning: when initialized here [-Wreorder]
      343
      Utils::Utils(v8::Isolate *isolate, const v8::Local<v8::Context> &context,
      ^~~~~

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            abhishek.jindal Abhishek Jindal
            jeelan.poola Jeelan Poola
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty