MB-48036 : Fix compilation warnings

Change-Id: I0c82a3d5c3fb62a4d88e5337fb0fc28089befb74
Reviewed-on: https://review.couchbase.org/c/eventing/+/166501
Tested-by: <abhishek.jindal@couchbase.com>
Reviewed-by: CI Bot
Reviewed-by: <ankit.prabhu@couchbase.com>